--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
     <!--===============================================================================================-->
@@ -126,7 +126,7 @@
         <div style="background-color:#DFF7F9;" class="pt-5">
             <div class="container pt-5">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 ">
                         <h2>Medical Equipment Tracking And Maintenance</h2>
                         <p class="w-100 p-heading p-large">Benefits include faster diagnosis, less invasive surgical procedures, and reduced hospital stays. A clinical engineering department’s role in any medical setting is to ensure that all clinical/medical equipment is maintained, tested,
                             and in a reliable working condition at all times.</p>
@@ -138,7 +138,7 @@
                     <div class="col-lg-12">
 
                         <!-- Card -->
-                        <div class="card">
+                        <div class="card wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
                             <img class="card-image" src="images/services-icon-1.svg" alt="alternative">
                             <div class="card-body">
                                 <h4 class="card-title">Management Advantages</h4>
@@ -149,7 +149,7 @@
                         <!-- end of card -->
 
                         <!-- Card -->
-                        <div class="card">
+                        <div class="card wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
                             <img class="card-image" src="images/services-icon-2.svg" alt="alternative">
                             <div class="card-body">
                                 <h4 class="card-title">Medical Challenges</h4>
@@ -160,7 +160,7 @@
                         <!-- end of card -->
 
                         <!-- Card -->
-                        <div class="card">
+                        <div class="card wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">
                             <img class="card-image" src="images/services-icon-3.svg" alt="alternative">
                             <div class="card-body">
                                 <h4 class="card-title">Accessible Information</h4>
@@ -316,12 +316,17 @@
     <script src="js/validator.min.js"></script>
     <!-- Validator.js - Bootstrap plugin that validates forms -->
     <script src="js/scripts.js"></script>
+
     <!-- Custom scripts -->
     <!--===============================================================================================-->
     <script src="vendor/animsition/js/animsition.min.js"></script>
     <!--===============================================================================================-->
     <script src="vendor/bootstrap/js/popper.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
     <!--===============================================================================================-->
 </body>
 
