--- a/views/css/main1.css
+++ b/views/css/main1.css
@@ -229,7 +229,7 @@ iframe {
 
 .container-login100 {
     width: 100%;
-    min-height: 100vh;
+    min-height: 91vh;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -239,7 +239,7 @@ iframe {
     justify-content: center;
     align-items: center;
     padding: 15px;
-    background: #ebeeef;
+    background-color: #DEF6FA;
 }
 
 .wrap-login100 {
