--- a/views/login.html
+++ b/views/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Login V15</title>
+    <title>Login - Hospital Tagline</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
@@ -26,10 +26,29 @@
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="css/util1.css">
     <link rel="stylesheet" type="text/css" href="css/main1.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <!--===============================================================================================-->
 </head>
 
 <body>
+    <!-- Breadcrumbs -->
+    <div class="ex-basic-1" style="height: 65px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="breadcrumbs">
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Login</span>
+                    </div>
+                    <!-- end of breadcrumbs -->
+                </div>
+                <!-- end of col -->
+            </div>
+            <!-- end of row -->
+        </div>
+        <!-- end of container -->
+    </div>
+    <!-- end of ex-basic-1 -->
+    <!-- end of breadcrumbs -->
 
     <div class="limiter">
         <div class="container-login100">
