--- a/views/management_system.html
+++ b/views/management_system.html
@@ -36,8 +36,7 @@
     <link href="css/magnific-popup.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/util1.css">
-    <link rel="stylesheet" type="text/css" href="css/main1.css">
+
     <!-- Favicon  -->
     <link rel="icon" type="image/png" href="images/icons/medical.png" />
 </head>
@@ -130,7 +129,7 @@
     <div id="staff" class="slider-1 mt-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 ">
+                <div class="col-lg-12">
                     <h2>Our Staff</h2>
 
                     <!-- Image Slider -->
@@ -402,49 +401,49 @@
     </div>
 
     <!-- Reports -->
-    <div id="reports " class="slider-2 ">
-        <div class="container ">
-            <div class="row ">
-                <div class="col-lg-6 ">
-                    <div class="image-container ">
-                        <img class="img-fluid " src="images/a.png " alt="alternative ">
+    <div id="reports" class="slider-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="image-container">
+                        <img class="img-fluid" src="images/a.png" alt="alternative">
                     </div>
                     <!-- end of image-container -->
                 </div>
                 <!-- end of col -->
-                <div class="col-lg-6 ">
+                <div class="col-lg-6">
                     <h2>Reports</h2>
 
                     <!-- Card Slider -->
-                    <div class="slider-container ">
-                        <div class="swiper-container card-slider ">
-                            <div class="swiper-wrapper ">
+                    <div class="slider-container">
+                        <div class="swiper-container card-slider">
+                            <div class="swiper-wrapper">
 
                                 <!-- Slide -->
-                                <div class="swiper-slide ">
-                                    <div class="card ">
-                                        <div class="text-container p-5 ">
+                                <div class="swiper-slide">
+                                    <div class="card">
+                                        <div class="text-container p-5">
                                             <h2>Pre-Installation Checklist</h2>
-                                            <div class="card-body ">
-                                                <ul class="list-unstyled li-space-lg mt-3 ">
-                                                    <li class="media ">
-                                                        <i class="fas fa-check "></i>
-                                                        <div class="media-body ">Pre-procurement needs assessment, engineer review, and committee approval
+                                            <div class="card-body">
+                                                <ul class="list-unstyled li-space-lg mt-3">
+                                                    <li class="media">
+                                                        <i class="fas fa-check"></i>
+                                                        <div class="media-body">Pre-procurement needs assessment, engineer review, and committee approval
                                                         </div>
                                                     </li>
-                                                    <li class="media ">
-                                                        <i class="fas fa-check "></i>
-                                                        <div class="media-body ">Procurement - equipment selection and validation
+                                                    <li class="media">
+                                                        <i class="fas fa-check"></i>
+                                                        <div class="media-body">Procurement - equipment selection and validation
                                                         </div>
                                                     </li>
-                                                    <li class="media ">
-                                                        <i class="fas fa-check "></i>
-                                                        <div class="media-body ">Receipt of Equipment - setup, training, and testing
+                                                    <li class="media">
+                                                        <i class="fas fa-check"></i>
+                                                        <div class="media-body">Receipt of Equipment - setup, training, and testing
                                                         </div>
                                                     </li>
                                                 </ul>
-                                                <a class="btn-solid-reg popup-with-move-anim mt-5 mr-2 " href="#details-lightbox-1 ">FORM</a>
-                                                <a class="btn-solid-reg mt-5 " href="preinstallation_data.html ">VIEW DATA</a>
+                                                <a class="btn-solid-reg popup-with-move-anim mt-5 mr-2" href="#details-lightbox-1">FORM</a>
+                                                <a class="btn-solid-reg mt-5" href="preinstallation_data.html">VIEW DATA</a>
                                             </div>
                                         </div>
                                         <!-- end of text-container -->
@@ -455,30 +454,30 @@
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
-                                <div class="swiper-slide ">
-                                    <div class="card ">
-                                        <div class="text-container p-5 ">
+                                <div class="swiper-slide">
+                                    <div class="card">
+                                        <div class="text-container p-5">
                                             <h2>Report Two</h2>
-                                            <div class="card-body ">
-                                                <ul class="list-unstyled li-space-lg mt-3 ">
-                                                    <li class="media ">
-                                                        <i class="fas fa-check "></i>
-                                                        <div class="media-body ">Pre-procurement needs assessment, engineer review, and committee approval
+                                            <div class="card-body">
+                                                <ul class="list-unstyled li-space-lg mt-3">
+                                                    <li class="media">
+                                                        <i class="fas fa-check"></i>
+                                                        <div class="media-body">Pre-procurement needs assessment, engineer review, and committee approval
                                                         </div>
                                                     </li>
-                                                    <li class="media ">
-                                                        <i class="fas fa-check "></i>
-                                                        <div class="media-body ">Procurement - equipment selection and validation
+                                                    <li class="media">
+                                                        <i class="fas fa-check"></i>
+                                                        <div class="media-body">Procurement - equipment selection and validation
                                                         </div>
                                                     </li>
-                                                    <li class="media ">
-                                                        <i class="fas fa-check "></i>
-                                                        <div class="media-body ">Receipt of Equipment - setup, training, and testing
+                                                    <li class="media">
+                                                        <i class="fas fa-check"></i>
+                                                        <div class="media-body">Receipt of Equipment - setup, training, and testing
                                                         </div>
                                                     </li>
                                                 </ul>
-                                                <a class="btn-solid-reg popup-with-move-anim mt-5 mr-2 " href="#details-lightbox-2 ">FORM</a>
-                                                <a class="btn-solid-reg popup-with-move-anim mt-5 " href=" ">VIEW DATA</a>
+                                                <a class="btn-solid-reg popup-with-move-anim mt-5 mr-2" href="#details-lightbox-2">FORM</a>
+                                                <a class="btn-solid-reg popup-with-move-anim mt-5" href="">VIEW DATA</a>
                                             </div>
                                         </div>
                                         <!-- end of text-container -->
@@ -489,30 +488,30 @@
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
-                                <div class="swiper-slide ">
-                                    <div class="card ">
-                                        <div class="text-container p-5 ">
+                                <div class="swiper-slide">
+                                    <div class="card">
+                                        <div class="text-container p-5">
                                             <h2>Report Three</h2>
-                                            <div class="card-body ">
-                                                <ul class="list-unstyled li-space-lg mt-3 ">
-                                                    <li class="media ">
-                                                        <i class="fas fa-check "></i>
-                                                        <div class="media-body ">Pre-procurement needs assessment, engineer review, and committee approval
+                                            <div class="card-body">
+                                                <ul class="list-unstyled li-space-lg mt-3">
+                                                    <li class="media">
+                                                        <i class="fas fa-check"></i>
+                                                        <div class="media-body">Pre-procurement needs assessment, engineer review, and committee approval
                                                         </div>
                                                     </li>
-                                                    <li class="media ">
-                                                        <i class="fas fa-check "></i>
-                                                        <div class="media-body ">Procurement - equipment selection and validation
+                                                    <li class="media">
+                                                        <i class="fas fa-check"></i>
+                                                        <div class="media-body">Procurement - equipment selection and validation
                                                         </div>
                                                     </li>
-                                                    <li class="media ">
-                                                        <i class="fas fa-check "></i>
-                                                        <div class="media-body ">Receipt of Equipment - setup, training, and testing
+                                                    <li class="media">
+                                                        <i class="fas fa-check"></i>
+                                                        <div class="media-body">Receipt of Equipment - setup, training, and testing
                                                         </div>
                                                     </li>
                                                 </ul>
-                                                <a class="btn-solid-reg popup-with-move-anim mt-5 mr-2 " href="#details-lightbox-3 ">FORM</a>
-                                                <a class="btn-solid-reg mt-5 " href=" ">VIEW DATA</a>
+                                                <a class="btn-solid-reg popup-with-move-anim mt-5 mr-2" href="#details-lightbox-3">FORM</a>
+                                                <a class="btn-solid-reg mt-5" href="">VIEW DATA</a>
                                             </div>
                                         </div>
                                         <!-- end of text-container -->
@@ -526,8 +525,8 @@
                             <!-- end of swiper-wrapper -->
 
                             <!-- Add Arrows -->
-                            <div class="swiper-button-next "></div>
-                            <div class="swiper-button-prev "></div>
+                            <div class="swiper-button-next"></div>
+                            <div class="swiper-button-prev"></div>
                             <!-- end of add arrows -->
 
                         </div>
@@ -550,37 +549,37 @@
 
     <!-- Details Lightboxes -->
     <!-- Details Lightbox 1 -->
-    <div id="details-lightbox-1 " class="lightbox-basic zoom-anim-dialog mfp-hide ">
-        <div class="container-contact100 ">
-            <div class="wrap-contact100 ">
-                <form class="contact100-form validate-form ">
-                    <span class="contact100-form-title ">
+    <div id="details-lightbox-1" class="lightbox-basic zoom-anim-dialog mfp-hide">
+        <div class="container-contact100">
+            <div class="wrap-contact100">
+                <form class="contact100-form validate-form">
+                    <span class="contact100-form-title">
                         Pre-Installation Form
                     </span>
 
 
-                    <div class="wrap-input100 bg1 rs1-wrap-input100 ">
-                        <span class="label-input100 pr-3 ">Hospital's Name* :</span>
-                        <input class="input100 " type="text " name="hospital " placeholder="Enter The Hospital 's Name" required>
+                    <div class="wrap-input100 bg1 rs1-wrap-input100">
+                        <span class="label-input100 pr-3">Hospital's Name* :</span>
+                        <input class="input100" type="text" name="hospital" placeholder="Enter The Hospital's Name" required="">
                     </div>
 
                     <div class="wrap-input100 bg1 rs1-wrap-input100">
                         <span class="label-input100 pr-3">Equipment's Name* :</span>
-                        <input class="input100" type="text" name="equipment" placeholder="Enter The Equipment's Name" required>
+                        <input class="input100" type="text" name="equipment" placeholder="Enter The Equipment's Name" required="">
                     </div>
 
                     <div class="wrap-input100 bg1 rs1-wrap-input100">
                         <span class="label-input100 pr-3">Department's Name* :</span>
-                        <input class="input100" type="text" name="department" placeholder="Enter The Department's Name" required>
+                        <input class="input100" type="text" name="department" placeholder="Enter The Department's Name" required="">
                     </div>
 
                     <div class="wrap-input100 bg1 rs2-wrap-input100">
                         <span class="label-input100 pr-3">Floor* :</span>
-                        <input class="input100" type="text" name="floor" placeholder="Enter The Floor" required>
+                        <input class="input100" type="text" name="floor" placeholder="Enter The Floor" required="">
                     </div>
                     <div class="wrap-input100 bg1 rs2-wrap-input100">
                         <span class="label-input100 pr-3">Room* :</span>
-                        <input class="input100" type="text" name="room" placeholder="Enter The Room" required>
+                        <input class="input100" type="text" name="room" placeholder="Enter The Room" required="">
                     </div>
                     <div class="table">
 
@@ -706,12 +705,12 @@
                     </div>
                     <div class="wrap-input100 bg1 ">
                         <span class="label-input100 pr-3">Date:</span>
-                        <input class="input100" type="date" name="equipment" placeholder="Enter The Date" required>
+                        <input class="input100" type="date" name="equipment" placeholder="Enter The Date" required="">
                         <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>
                     </div>
                     <div class="wrap-input100 bg1 ">
                         <span class="label-input100 pr-3">Name* :</span>
-                        <input class="input100" type="text" name="name" placeholder="Enter Your Name" required>
+                        <input class="input100" type="text" name="name" placeholder="Enter Your Name" required="">
                     </div>
 
 
