--- a/views/login.html
+++ b/views/login.html
@@ -75,7 +75,7 @@
 
                     <div class="container-login100-form-btn ">
                         <button class="login100-form-btn ">
-							<a href="management_system.html">
+							<a href="management.html">
 								Login
 							</a>
 							
