--- a/views/add_technician.html
+++ b/views/add_technician.html
@@ -149,7 +149,7 @@
                                     </div>
                                     <div class="form-group">
                                         <div class="col-lg-offset-2 col-lg-10">
-                                            <button class="btn btn-theme" type="submit">Save</button>
+                                            <button class="btn btn-theme" type="submit">Add</button>
                                             <a class="btn btn-theme04" type="button" href="technicians.html">Cancel</a>
                                         </div>
                                     </div>
