--- a/views/add_engineer.html
+++ b/views/add_engineer.html
@@ -144,7 +144,7 @@
 
                                     <div class="form-group">
                                         <div class="col-lg-offset-2 col-lg-10">
-                                            <button class="btn btn-theme" type="submit">Save</button>
+                                            <button class="btn btn-theme" type="submit">Add</button>
                                             <a class="btn btn-theme04" type="button" href="engineers.html">Cancel</a>
                                         </div>
                                     </div>
