--- a/views/edit_technician.html
+++ b/views/edit_technician.html
@@ -86,7 +86,7 @@
                             <span>Reports</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="pre_installation.html.html">Pre-installation Report</a></li>
+                            <li><a href="pre_installation.html">Pre-installation Report</a></li>
                             <li><a href="preventive_maintance.html">Preventive Maintainance Report</a></li>
                             <li><a href="workorder.html">Work Order Report</a></li>
                         </ul>
