--- a/views/engineers.html
+++ b/views/engineers.html
@@ -130,12 +130,10 @@
                                         <td class="  hidden-phone">aaa.abc.xx</td>
                                         <td class=" hidden-phone">123</td>
                                         <td class="center">
-                                            <a href="edit_engineer.html" style="color: blue;padding-right: 10px;">
-                                                <i class="fa  fa-edit"></i>
-                                            </a>
-                                            <a href="#delete" style="color: red;" data-toggle="modal" data-target="#delete">
-                                                <i class="fa  fa-trash-o"></i>
-                                            </a>
+
+                                            <a href="edit_engineer.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
+                                            <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o "></i></button>
+
                                         </td>
                                     </tr>
 
