--- a/views/equipments.html
+++ b/views/equipments.html
@@ -131,12 +131,8 @@
                                         <td class=" hidden-phone">Radiology</td>
 
                                         <td class="center">
-                                            <a href="edit_equipment.html" style="color: blue;padding-right: 10px;">
-                                                <i class="fa  fa-edit"></i>
-                                            </a>
-                                            <a href="#delete" style="color: red;" data-toggle="modal" data-target="#delete">
-                                                <i class="fa  fa-trash-o"></i>
-                                            </a>
+                                            <a href="edit_equipment.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
+                                            <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o "></i></button>
                                         </td>
                                     </tr>
 
