--- a/views/pre_installation.html
+++ b/views/pre_installation.html
@@ -24,6 +24,7 @@
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-responsive.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
     <!-- =======================================================
     Template Name: Dashio
@@ -114,28 +115,29 @@
 
                                 <thead>
                                     <tr>
-                                        <th>First Name</th>
-                                        <th>Last Name</th>
-                                        <th>Job</th>
-                                        <th class="hidden-phone">Email</th>
-                                        <th class="hidden-phone">Password</th>
+                                        <th>Equipment</th>
+                                        <th>Date</th>
+                                        <th>Name</th>
+                                        <th class="hidden-phone">Hospital</th>
+                                        <th class="hidden-phone">Department</th>
+                                        <th class="hidden-phone">Floor</th>
+                                        <th class="hidden-phone">Room</th>
                                         <th>Manage</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr class="gradeA">
-                                        <td>Alaa</td>
-                                        <td>Gamal</td>
-                                        <td>Biomedical Engineer</td>
-                                        <td class="  hidden-phone">aaa.abc.xx</td>
-                                        <td class=" hidden-phone">123</td>
+                                        <td>MRI</td>
+                                        <td>20/10/2020</td>
+                                        <td>Alaa Gamal</td>
+                                        <td class="  hidden-phone">Dar Elfoaad</td>
+                                        <td class=" hidden-phone">Radiology</td>
+                                        <td class=" hidden-phone">2</td>
+                                        <td class=" hidden-phone">5</td>
+
                                         <td class="center">
-                                            <a href="edit_preinstallation.html" style="color: blue;padding-right: 10px;">
-                                                <i class="fa  fa-edit"></i>
-                                            </a>
-                                            <a href="#delete" style="color: red;" data-toggle="modal" data-target="#delete">
-                                                <i class="fa  fa-trash-o"></i>
-                                            </a>
+                                            <a href="edit_preinstallation.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
+                                            <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o "></i></button>
                                         </td>
                                     </tr>
 
@@ -196,12 +198,105 @@
         /* Formating function for row details */
         function fnFormatDetails(oTable, nTr) {
             var aData = oTable.fnGetData(nTr);
-            var sOut = '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">';
-            sOut += '<tr><td>Name:</td><td>' + aData[1] + " " + aData[2] + '</td></tr>';
-            sOut += '<tr><td>Job:</td><td>' + aData[3] + '</td></tr>';
-            sOut += '<tr><td>Email:</td><td>' + aData[4] + '</td></tr>';
-            sOut += '<tr><td>Password:</td><td>' + aData[5] + '</td></tr>';
+            var sOut = '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;margin:auto">';
+            sOut += "<tr><td>Equipment's Name:</td><td>" + aData[1] + '</td></tr>';
+            sOut += '<tr><td>Date:</td><td>' + aData[2] + '</td></tr>';
+            sOut += '<tr><td>The Person Who Filled The Form:</td><td>' + aData[3] + '</td></tr>';
+            sOut += "<tr><td>Hospital's Name: </td><td>" + aData[4] + '</td> </tr>';
+            sOut += "<tr><td>Department's Name: </td><td>" + aData[5] + '</td> </tr>';
+            sOut += "<tr><td>Floor's Number: </td><td>" + aData[6] + '</td> </tr>';
+            sOut += "<tr><td>Room's Number: </td><td>" + aData[7] + '</td> </tr>';
             sOut += '</table>';
+            sOut += `<div class="table">
+
+<div class="row head ">
+    <div class="cell">
+        Task Description
+    </div>
+    <div class="cell">
+        Check
+    </div>
+    <div class="cell pl-5">
+        Responsibility of (Name)
+    </div>
+    <div class="cell pl-5">
+        Comments
+    </div>
+</div>
+
+<div class="row notheader">
+    <div class="cell">
+        Pre-Installation Form Copied
+    </div>
+    <div class="cell">
+        <span>` + "True" + `</span>
+    </div>
+    <div class="cell">
+        <span>` + "Name" + `</span>
+    </div>
+    <div class="cell pl-3">
+        <span>` + "Comment" + `</span>
+    </div>
+</div>
+
+<div class="row notheader">
+    <div class="cell">
+        Required Tools Available
+    </div>
+    <div class="cell">
+        <span>` + "True" + `</span>
+    </div>
+    <div class="cell">
+        <span>` + "Name" + `</span>
+    </div>
+    <div class="cell pl-3">
+        <span>` + "Comment" + `</span>
+    </div>
+</div>
+<div class="row notheader">
+    <div class="cell">
+        Required Supplies Available
+    </div>
+    <div class="cell">
+        <span>` + "True" + `</span>
+    </div>
+    <div class="cell">
+        <span>` + "Name" + `</span>
+    </div>
+    <div class="cell pl-3">
+        <span>` + "Comment" + `</span>
+    </div>
+</div>
+
+<div class="row notheader">
+    <div class="cell">
+        Site Can Be Locked After Hours
+    </div>
+    <div class="cell">
+        <span>` + "True" + `</span>
+    </div>
+    <div class="cell">
+        <span>` + "Name" + `</span>
+    </div>
+    <div class="cell pl-3">
+        <span>` + "Comment" + `</span>
+    </div>
+</div>
+
+<div class="row notheader">
+    <div class="cell">
+        Lock Keys Assigned To Personnel
+    </div>
+    <div class="cell">
+        <span>` + "True" + `</span>
+    </div>
+    <div class="cell">
+        <span>` + "Name" + `</span>
+    </div>
+    <div class="cell pl-3">
+        <span>` + "Comment" + `</span>
+    </div>
+</div>`
 
             return sOut;
         }
