--- a/views/equipments.html
+++ b/views/equipments.html
@@ -54,7 +54,7 @@
         *********************************************************************************************************************************************************** -->
         <!--sidebar start-->
         <aside>
-            <div id="sidebar" class="nav-collapse ">
+            <div id="sidebar" class="nav-collapse">
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu" id="nav-accordion">
                     <li class="mt">
@@ -125,14 +125,14 @@
                                 <tbody>
                                     <tr class="gradeA">
                                         <td>MRI</td>
-                                        <td>20/10/2020</td>
+                                        <td>20-10-2020</td>
                                         <td class="  hidden-phone">111</td>
-                                        <td class=" hidden-phone">20/10/2021</td>
+                                        <td class=" hidden-phone">20-10-2021</td>
                                         <td class=" hidden-phone">Radiology</td>
 
                                         <td class="center">
                                             <a href="edit_equipment.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
-                                            <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o "></i></button>
+                                            <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o"></i></button>
                                         </td>
                                     </tr>
 
