--- a/views/pre_installation.html
+++ b/views/pre_installation.html
@@ -55,7 +55,7 @@
         *********************************************************************************************************************************************************** -->
         <!--sidebar start-->
         <aside>
-            <div id="sidebar" class="nav-collapse ">
+            <div id="sidebar" class="nav-collapse">
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu" id="nav-accordion">
                     <li class="mt">
@@ -65,12 +65,12 @@
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="javascript:;" class="active">
+                        <a href="javascript:;">
                             <i class="fa fa-user-md"></i>
                             <span>Staff</span>
                         </a>
                         <ul class="sub">
-                            <li class="active"><a href="engineers.html">Engineers</a></li>
+                            <li><a href="engineers.html">Engineers</a></li>
                             <li><a href="technicians.html">Technicians</a></li>
 
                         </ul>
@@ -82,12 +82,12 @@
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="javascript:;">
+                        <a class="active" href="javascript:;">
                             <i class="fa fa-book"></i>
                             <span>Reports</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="pre_installation.html">Pre-installation Report</a></li>
+                            <li class="active"><a href="pre_installation.html">Pre-installation Report</a></li>
                             <li><a href="preventive_maintance.html">Preventive Maintainance Report</a></li>
                             <li><a href="workorder.html">Work Order Report</a></li>
                         </ul>
@@ -128,7 +128,7 @@
                                 <tbody>
                                     <tr class="gradeA">
                                         <td>MRI</td>
-                                        <td>20/10/2020</td>
+                                        <td>20-10-2020</td>
                                         <td>Alaa Gamal</td>
                                         <td class="  hidden-phone">Dar Elfoaad</td>
                                         <td class=" hidden-phone">Radiology</td>
@@ -137,7 +137,7 @@
 
                                         <td class="center">
                                             <a href="edit_preinstallation.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
-                                            <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o "></i></button>
+                                            <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o"></i></button>
                                         </td>
                                     </tr>
 
@@ -209,7 +209,7 @@
             sOut += '</table>';
             sOut += `<div class="table">
 
-<div class="row head ">
+<div class="row head">
     <div class="cell">
         Task Description
     </div>
