--- a/views/add_preinstallation.html
+++ b/views/add_preinstallation.html
@@ -20,6 +20,7 @@
     <link href="lib/advanced-datatable/css/demo_page.css" rel="stylesheet" />
     <link href="lib/advanced-datatable/css/demo_table.css" rel="stylesheet" />
     <link rel="stylesheet" href="lib/advanced-datatable/css/DT_bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="lib/bootstrap-datepicker/css/datepicker.css" />
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
@@ -54,7 +55,7 @@
         *********************************************************************************************************************************************************** -->
         <!--sidebar start-->
         <aside>
-            <div id="sidebar" class="nav-collapse ">
+            <div id="sidebar" class="nav-collapse">
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu" id="nav-accordion">
                     <li class="mt">
@@ -111,32 +112,32 @@
                         <div class="form-panel">
                             <div class="form">
                                 <form class="cmxform form-horizontal style-form" id="signupForm" method="get" action="">
-                                    <div class="form-group ">
+                                    <div class="form-group">
                                         <label for="hospital" class="control-label col-lg-2">Hospital's Name</label>
                                         <div class="col-lg-10">
                                             <input class=" form-control" id="hospital" name="hospital" type="text" required/>
                                         </div>
                                     </div>
-                                    <div class="form-group ">
+                                    <div class="form-group">
                                         <label for="department" class="control-label col-lg-2">Department's Name</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control " id="department" name="department" type="text" required />
+                                            <input class="form-control" id="department" name="department" type="text" required />
                                         </div>
                                     </div>
-                                    <div class="form-group ">
+                                    <div class="form-group">
                                         <label for="equipment" class="control-label col-lg-2">Equipment's Name</label>
                                         <div class="col-lg-10">
                                             <input class=" form-control" id="equipment" name="equipment" type="text" required/>
                                         </div>
                                     </div>
-                                    <div class="form-group ">
+                                    <div class="form-group">
                                         <label for="floor" class="control-label col-lg-2">Floor's Number</label>
                                         <div class="col-lg-4">
-                                            <input class="form-control " id="floor" style="width: 80%!important;" name="floor" type="number" required />
+                                            <input class="form-control" id="floor" style="width: 80%!important;" name="floor" type="number" required />
                                         </div>
                                         <label for="room" class="control-label col-lg-2">Room's Number</label>
                                         <div class="col-lg-4">
-                                            <input class="form-control " style="width: 80%!important;" id="room" name="room" type="number" required />
+                                            <input class="form-control" style="width: 80%!important;" id="room" name="room" type="number" required />
                                         </div>
                                     </div>
                                     <table class="table table-striped table-advance table-hover">
@@ -157,14 +158,14 @@
                                                         <input type="checkbox" style="width: 20px" class="checkbox form-control" id="preinstallCheck" name="preinstallCheck"></td>
                                                 </div>
                                                 <td>
-                                                    <div class="form-group ">
+                                                    <div class="form-group">
                                                         <div class="col-lg-10">
                                                             <input class=" form-control" id="preinstallRON" name="preinstallRON" placeholder="Enter The Name" type="text" required/>
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="form-group ">
+                                                    <div class="form-group">
                                                         <div class="col-lg-10">
                                                             <input class=" form-control" id="preinstallComment" name="preinstallComment" placeholder="Enter Any Comments" type="text" required/>
                                                         </div>
@@ -178,14 +179,14 @@
                                                         <input type="checkbox" style="width: 20px" class="checkbox form-control" id="requiredtoolCheck" name="requiredtoolCheck"></td>
                                                 </div>
                                                 <td>
-                                                    <div class="form-group ">
+                                                    <div class="form-group">
                                                         <div class="col-lg-10">
                                                             <input class=" form-control" id="requiredtoolRON" name="requiredtoolRON" placeholder="Enter The Name" type="text" required/>
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="form-group ">
+                                                    <div class="form-group">
                                                         <div class="col-lg-10">
                                                             <input class=" form-control" id="requiredtoolComment" name="requiredtoolComment" placeholder="Enter Any Comments" type="text" required/>
                                                         </div>
@@ -199,14 +200,14 @@
                                                         <input type="checkbox" style="width: 20px" class="checkbox form-control" id="requiredsupllyCheck" name="requiredsupllyCheck"></td>
                                                 </div>
                                                 <td>
-                                                    <div class="form-group ">
+                                                    <div class="form-group">
                                                         <div class="col-lg-10">
                                                             <input class=" form-control" id="requiredsupllyRON" name="requiredsupllyRON" placeholder="Enter The Name" type="text" required/>
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="form-group ">
+                                                    <div class="form-group">
                                                         <div class="col-lg-10">
                                                             <input class=" form-control" id="requiredsupllyComment" name="requiredsupllyComment" placeholder="Enter Any Comments" type="text" required/>
                                                         </div>
@@ -220,14 +221,14 @@
                                                         <input type="checkbox" style="width: 20px" class="checkbox form-control" id="sitelockCheck" name="sitelockCheck"></td>
                                                 </div>
                                                 <td>
-                                                    <div class="form-group ">
+                                                    <div class="form-group">
                                                         <div class="col-lg-10">
                                                             <input class=" form-control" id="sitelockRON" name="sitelockRON" placeholder="Enter The Name" type="text" required/>
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="form-group ">
+                                                    <div class="form-group">
                                                         <div class="col-lg-10">
                                                             <input class=" form-control" id="sitelockComment" name="sitelockComment" placeholder="Enter Any Comments" type="text" required/>
                                                         </div>
@@ -241,14 +242,14 @@
                                                         <input type="checkbox" style="width: 20px" class="checkbox form-control" id="lockkeyCheck" name="lockkeyCheck"></td>
                                                 </div>
                                                 <td>
-                                                    <div class="form-group ">
+                                                    <div class="form-group">
                                                         <div class="col-lg-10">
                                                             <input class=" form-control" id="lockkeyRON" name="lockkeyRON" placeholder="Enter The Name" type="text" required/>
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="form-group ">
+                                                    <div class="form-group">
                                                         <div class="col-lg-10">
                                                             <input class=" form-control" id="lockkeyComment" name="lockkeyComment" placeholder="Enter Any Comments" type="text" required/>
                                                         </div>
@@ -257,17 +258,17 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                    <div class="form-group ">
+                                    <div class="form-group">
                                         <label for="name" class="control-label col-lg-2">Your Name</label>
                                         <div class="col-lg-10">
                                             <input class=" form-control" id="name" name="name" type="text" required/>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label col-lg-2">Date</label>
+                                        <label for="date" class="control-label col-lg-2">Date</label>
                                         <div class="col-lg-3">
                                             <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
-                                                <input type="text" readonly="" value="01-01-2014" size="16" class="form-control" required>
+                                                <input type="text" readonly="" id="date" name="date" value="01-01-2014" size="16" class="form-control" required>
                                                 <span class="input-group-btn add-on">
                             <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
                             </span>
@@ -279,7 +280,7 @@
                                     <div class="form-group">
                                         <div class="col-lg-offset-2 col-lg-10">
                                             <button class="btn btn-theme" type="submit">Add</button>
-                                            <a class="btn btn-theme04" type="button" href="engineers.html">Cancel</a>
+                                            <a class="btn btn-theme04" type="button" href="pre_installation.html">Cancel</a>
                                         </div>
                                     </div>
                                 </form>
@@ -308,7 +309,11 @@
     <!--common script for all pages-->
     <script src="lib/common-scripts.js"></script>
     <!--script for this page-->
+
     <script src="lib/form-validation-script.js"></script>
+    <script type="text/javascript" src="lib/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
+    <script type="text/javascript" src="lib/bootstrap-daterangepicker/date.js"></script>
+    <script src="lib/advanced-form-components.js"></script>
 
 </body>
 
