--- a/views/edit_equipment.html
+++ b/views/edit_equipment.html
@@ -56,7 +56,7 @@
         *********************************************************************************************************************************************************** -->
         <!--sidebar start-->
         <aside>
-            <div id="sidebar" class="nav-collapse ">
+            <div id="sidebar" class="nav-collapse">
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu" id="nav-accordion">
                     <li class="mt">
@@ -114,35 +114,35 @@
                             <div class="form">
                                 <form class="cmxform form-horizontal style-form" id="signupForm" method="get" action="">
 
-                                    <div class="form-group ">
+                                    <div class="form-group">
                                         <label for="lastname" class="control-label col-lg-2">Name</label>
                                         <div class="col-lg-10">
                                             <input class=" form-control" id="lastname" name="lastname" type="text" value="MRI" required/>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label col-lg-2">Model</label>
+                                        <label for="model" class="control-label col-lg-2">Model</label>
                                         <div class="col-lg-3">
                                             <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
-                                                <input type="text" readonly="" value="20-10-2020" size="16" class="form-control" required>
+                                                <input type="text" readonly="" id="model" name="model" value="20-10-2020" size="16" class="form-control" required>
                                                 <span class="input-group-btn add-on">
                             <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
                             </span>
                                             </div>
                                             <span class="help-block">Select date</span>
-                                        </div>
-                                    </div>
-                                    <div class="form-group ">
-                                        <label for="serial" class="control-label col-lg-2">Serial Number</label>
-                                        <div class="col-lg-10">
-                                            <input class="form-control " id="serial" name="serial" type="number" value="111" required />
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label col-lg-2">Maintainance Date</label>
+                                        <label for="serial" class="control-label col-lg-2">Serial Number</label>
+                                        <div class="col-lg-10">
+                                            <input class="form-control" id="serial" name="serial" type="number" value="111" required />
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="maintainDate" class="control-label col-lg-2">Maintainance Date</label>
                                         <div class="col-lg-3">
                                             <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
-                                                <input type="text" readonly="" value="20-10-2021" size="16" class="form-control" required>
+                                                <input type="text" readonly="" id="maintainDate" name="maintainDate" value="20-10-2021" size="16" class="form-control" required>
                                                 <span class="input-group-btn add-on">
                             <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
                             </span>
@@ -150,10 +150,10 @@
                                             <span class="help-block">Select date</span>
                                         </div>
                                     </div>
-                                    <div class="form-group ">
+                                    <div class="form-group">
                                         <label for="department" class="control-label col-lg-2">Department</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control " id="department" name="department" type="text" value="Radiology" required />
+                                            <input class="form-control" id="department" name="department" type="text" value="Radiology" required />
                                         </div>
                                     </div>
                                     <div class="form-group">
